tests/golden/defaults/rabbitmq-operator/rabbitmq-operator/10_clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/component: rabbitmq-operator
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/part-of: rabbitmq
  name: rabbitmq-cluster-operator-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: rabbitmq-cluster-operator-role
subjects:
  - kind: ServiceAccount
    name: rabbitmq-cluster-operator
    namespace: syn-rabbitmq-operator
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: messaging-topology-operator
  name: messaging-topology-manager-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: messaging-topology-manager-role
subjects:
  - kind: ServiceAccount
    name: messaging-topology-operator
    namespace: syn-rabbitmq-operator
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: messaging-topology-metrics-auth-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: messaging-topology-metrics-auth-role
subjects:
  - kind: ServiceAccount
    name: messaging-topology-operator
    namespace: syn-rabbitmq-operator
