tests/golden/defaults/rabbitmq-operator/rabbitmq-operator/10_mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: syn-rabbitmq-operator/messaging-topology-serving-cert
  name: messaging-topology-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /mutate-rabbitmq-com-v1beta1-queue
    failurePolicy: Fail
    name: mqueue.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
        resources:
          - queues
    sideEffects: None
