tests/golden/defaults/rabbitmq-operator/rabbitmq-operator/10_serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: rabbitmq-cluster-operator
  namespace: syn-rabbitmq-operator
---
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: messaging-topology-operator
  name: messaging-topology-operator
  namespace: syn-rabbitmq-operator
